--- a/src/main/resources/templates/admin/candidates/candidate.html
+++ b/src/main/resources/templates/admin/candidates/candidate.html
@@ -113,62 +113,25 @@
 <!-- PHẦN CONTENT -->
 <main class="content" layout:fragment="content">
     <h1 class="h3 mb-3"><strong>Candidate</strong></h1>
-    <!-- Form nhập -->
-    <!--            <div class="row mt-4">-->
-    <!--                <div class="col-12 col-lg-12 col-xxl-12">-->
-    <!--                    <div class="card flex-fill">-->
-    <!--                        <div class="card-header">-->
-    <!--                            <h5 class="card-title mb-0">Add New Candidate</h5>-->
-    <!--                        </div>-->
-    <!--                        <div class="card-body">-->
-    <!--                            <form>-->
-    <!--                                <div class="mb-3">-->
-    <!--                                    <label for="candidateName" class="form-label">Name</label>-->
-    <!--                                    <input type="text" class="form-control" id="candidateName" placeholder="Enter Candidate Name" required>-->
-    <!--                                </div>-->
-    <!--                                <div class="mb-3">-->
-    <!--                                    <label for="candidatePhone" class="form-label">Phone</label>-->
-    <!--                                    <input type="text" class="form-control" id="candidatePhone" placeholder="Enter Phone Number" required>-->
-    <!--                                </div>-->
-    <!--                                <div class="mb-3">-->
-    <!--                                    <label for="candidateAddress" class="form-label">Address</label>-->
-    <!--                                    <input type="text" class="form-control" id="candidateAddress" placeholder="Enter Address" required>-->
-    <!--                                </div>-->
-    <!--                                <div class="mb-3">-->
-    <!--                                    <label for="candidateSex" class="form-label">Sex</label>-->
-    <!--                                    <select class="form-select" id="candidateSex" required>-->
-    <!--                                        <option value="">Select Sex</option>-->
-    <!--                                        <option value="Male">Male</option>-->
-    <!--                                        <option value="Female">Female</option>-->
-    <!--                                        <option value="Other">Other</option>-->
-    <!--                                    </select>-->
-    <!--                                </div>-->
-    <!--                                <div class="mb-3">-->
-    <!--                                    <label for="candidateDob" class="form-label">Date of Birth</label>-->
-    <!--                                    <input type="date" class="form-control" id="candidateDob" required>-->
-    <!--                                </div>-->
-    <!--                                <div class="mb-3">-->
-    <!--                                    <label for="candidateImage" class="form-label">Upload Image</label>-->
-    <!--                                    <input type="file" class="form-control" id="candidateImage">-->
-    <!--                                </div>-->
-    <!--                                <button type="submit" class="btn btn-primary">Submit</button>-->
-    <!--                            </form>-->
-    <!--                        </div>-->
-    <!--                    </div>-->
-    <!--                </div>-->
-    <!--            </div>-->
 
-
-
-    <!-- Table -->
     <div class="row">
 
         <div class="col-12 col-lg-12 col-xxl-12 ">
             <div class="card flex-fill">
                 <div class="card-header">
+                    <div class="filter-bar mb-3 gap-2">
 
-                    <h5 class="card-title mb-0">Candidate</h5>
+
+                        <form method="get" th:action="@{/admin/candidates}" class="d-flex gap-2">
+                            <!-- Input Tìm kiếm theo tên ứng viên -->
+                            <input type="text" name="name" placeholder="Tìm kiếm theo tên ứng viên"
+                                   th:value="${searchKeyword}" class="form-control form-control-sm">
+                            <!-- Nút Tìm kiếm -->
+                            <button type="submit" class="btn btn-primary btn-sm"><i class="align-middle" data-feather="search"></i></button>
+                        </form>
+                    </div>
                 </div>
+
                 <table class="table table-hover my-0">
                     <thead>
                     <tr>
@@ -179,7 +142,7 @@
                         <th>Địa chỉ</th>
                         <th>Giới tính</th>
                         <th>Ngày sinh</th>
-                        <th>Actions</th> <!-- Thêm cột mới cho các nút -->
+
 
                     </tr>
                     </thead>
@@ -192,13 +155,7 @@
                         <td th:text="${candidate.address}"></td>
                         <td th:text="${candidate.sex}"></td>
                         <td th:text="${candidate.dateOfBirth}"></td>
-                        <td>
-                            <a th:href="@{' ' + ${candidate.id}}"
-                               class="btn btn-outline-secondary btn-sm rounded-circle"
-                               style="width: 40px; height: 40px; display: inline-flex; align-items: center; justify-content: center; font-size: 24px;">
-                                <i class="align-middle" data-feather="eye"></i>
-                            </a>
-                        </td>
+
                     </tr>
 
 
